--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
           </div>
           <p class="text">Select Tip %</p>
           <div class="container">
-            <button class="btn testbtn" data-active="true"><p>5%</p></button>
-            <button class="btn"><p>10%</p></button>
-            <button class="btn"><p>15%</p></button>
-            <button class="btn"><p>25%</p></button>
-            <button class="btn"><p>50%</p></button>
+            <button class="btn" name="bes" data-active="false">5%</button>
+            <button class="btn" name="on" data-active="false">10%</button>
+            <button class="btn" name="onbes" data-active="false">15%</button>
+            <button class="btn" name="yirmibes" data-active="false">25%</button>
+            <button class="btn" name="elli" data-active="false">50%</button>
             <input type="number" placeholder="Custom" class="percent" />
           </div>
           <p class="text">Number Of People</p>
           <div class="test">
             <img src="./assets/icon-person.svg" class="dolar" alt="" />
-            <input type="text" placeholder="0" class="number-people" />
+            <input type="number" placeholder="0" class="number-people" />
           </div>
         </section>
         <section class="right">
@@ -47,7 +47,7 @@
                 <h2>Tip Amount</h2>
                 <p>/ person</p>
               </div>
-              <div class="tip">
+              <div class="tip amount">
                 <h2>$0.00</h2>
               </div>
             </div>
@@ -56,7 +56,7 @@
                 <h2>Total</h2>
                 <p>/ person</p>
               </div>
-              <div class="tip">
+              <div class="tip total">
                 <h2>$0.00</h2>
               </div>
             </div>
